Prepare CompileFlow 2.0.0-SNAPSHOT for release